// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > Snapshots > matches default snapshot 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
>
  Test content
</textarea>
`;

exports[`Textarea > Snapshots > matches disabled state snapshot 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Test content
</textarea>
`;

exports[`Textarea > Snapshots > matches error state snapshot 1`] = `
<div
  class="textarea-wrapper"
>
  <textarea
    class="textarea textarea--error"
    data-testid="textarea"
  >
    Test content
  </textarea>
  <div
    class="textarea-footer"
  >
    <span
      class="textarea-error"
    />
  </div>
</div>
`;

exports[`Textarea > Snapshots > matches loading state snapshot 1`] = `
<textarea
  class="textarea textarea--loading"
  data-testid="textarea"
  disabled=""
>
  Test content
</textarea>
`;

exports[`Textarea > Snapshots > matches required state snapshot 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  required=""
>
  Test content
</textarea>
`;
